[metadata]
name = RealPid
version = 0.0.1
author = Federica Oliva
description = A real PID
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chentyra/RealPID
keywords = pid, PID, control , controller, real
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True